# XFaVoT

./: .gitignore  Dockerfile  README.md  compose.yml  main.py  pyproject.toml
BigVGAN/: inference_e2e.py  models.py  utils.py
Configs/: audio_config.yml  train_config.yml
StarGANv2VC/: losses.py  transforms.py
src/datasets/: ADatasetUtils.py  Datalist.py  IADataset.py  get_data.py  get_datalist.py
src/models/: build_models.py
src/optimizers/: build_optimizers.py
src/trainers/: trainer.py
src/utils/: align_pathobj.py  print_loading.py  seed_everything.py
starganv2/core/: model.py  solver.py
starganv2/metrics/: eval.py  fid.py
